# PVplotter

./: ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: rename_project.sh
.github/backup/: setup.py
.github/workflows/: main.yml  release.yml
pvplotter/: __main__.py  base.py  cli.py
tests/: test_base.py
