[tool.poetry]
name = "pvplotter"
version = "0.1.0"
description = ""
authors = ["awicenec"]
readme = "README.md"
packages = [{include = "pvplotter"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
typer = {extras = ["all"], version = "^0.7.0"}
pyqt5 = "^5.15.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^7.0.1"
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
pytest-cov = "^4.0.0"
codecov = "^2.1.12"
mypy = "^0.991"
gitchangelog = "^3.0.4"
mkdocs = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pvplotter = 'pvplotter.cli:app'
