[tool.poetry]
name = "pvplotter"
version = "0.1.0"
description = ""
authors = ["awicenec"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pvplotter = 'pvplotter.cli:app'
