[tool.poetry]
name = "pvplotter"
version = "0.1.0"
description = ""
authors = ["awicenec"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.3.1"
isort = "^5.12.0"
mypy = "^1.2.0"
flake8 = "^6.0.0"
black = "^23.3.0"
coverage = "^7.2.3"
pytest-cov = "^4.0.0"
numpy = "^1.24.3"
pandas = "^2.0.1"
typer = {extras = ["all"], version = "^0.7.0"}
matplotlib = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pvplotter = 'pvplotter.cli:app'
